<resources>
    <string name="app_name">Smart Greenhouse</string>
    <string name="app_version">1.1.14</string>
    <string name="app_description">Smart Greenhouse App</string>
    <string name="app_author">DeepCode</string>
    <string name="UserAdmin">Usuario Admin</string>
    <string name="Welcome">Bienvenido</string>
    <string name="UserUser">Usuario</string>
    <string name="Drivers">Controladores</string>
    <string name="monitoring">Monitorización</string>
    <string name="cultivaAI">CultivaIA</string>
    <string name="ventilation">Ventilación</string>
    <string name="emergency_control">Control de emergencia</string>
    <string name="ficha_plantacion">Ficha de Plantación</string>
    <string name="graphics">Gráficas</string>
    <string name="users">Usuarios</string>
    <string name="profile">Perfil</string>
    <string name="new_users">Nuevo usuario</string>
    <string name="update_users">Actualizar usuario</string>
    <string name="card_title_cultiva_ia">CultivaIA</string>
    <string name="card_subtitle_cultiva_ia">Una IA experta en agronomía para optimizar tus cultivos
    </string>
    <string name="fp_nombre">Maíz</string>
    <string name="fp_nombre_cientifico">Zea mays</string>
    <string name="fp_variedades">Híbridos y criollos según clima y propósito (forrajero o grano)</string>
    <string name="fp_tipo_suelo">Suelo franco o franco-arenoso, con buen drenaje y pH entre 5.5 y 7.5</string>
    <string name="fp_riego">Goteo: Permite un uso eficiente del agua y reduce enfermedades</string>
    <string name="fp_fertilizacion">Alto requerimiento de nitrógeno, fósforo y potasio. Aplicar en etapas clave</string>
    <string name="fp_plagas_enfermedades">Plagas principales: Gusano cogollero, pulgones, barrenadores del tallo. Control con bioplaguicidas o insecticidas específicos.
                                          Enfermedades comunes: Roya, mancha de asfalto y fusariosis. Se previenen con rotación de cultivos, y buen manejo del riego</string>
    <string name="fp_temperatura">Óptima: 18°C - 30°C. Mínima tolerable: 10°C (por debajo, afecta la germinación).
                                  Máxima tolerable: 35°C (reduce la producción y calidad del grano).
                                  Evitar heladas: El maíz es sensible a temperaturas bajo 0°C.</string>
    <string name="fp_humedad">Prefiere 60-80% de humedad relativa.
                              Déficit hídrico en floración puede reducir el rendimiento hasta un 50%.
                              Exceso de humedad puede causar pudrición de raíces y proliferación de hongos.</string>
    <string name="fp_luz">Mínimo 6 horas de sol directo al día para un desarrollo óptimo.
                          En días nublados prolongados, el crecimiento puede ralentizarse y afectar la producción.</string>
    <string name="fp_consejos">Realizar siembra escalonada para minimizar riesgos por condiciones climáticas.
                               Monitorear plagas y aplicar controles preventivos antes de que se propaguen.
                               Mantener un buen nivel de materia orgánica en el suelo para mejorar la retención de nutrientes.</string>
    <string name="title_crop_name">🌾 Nombre del cultivo</string>
    <string name="title_scientific_name">🔬 Nombre científico</string>
    <string name="title_varieties">🌾 Variedades</string>
    <string name="title_soil_type">🌱 Tipo de suelo</string>
    <string name="title_irrigation_types">💧 Tipos de riego</string>
    <string name="title_fertilization">🌿 Fertilización</string>
    <string name="title_pest_disease_control">🐛 Control de plagas y enfermedades</string>
    <string name="title_temperature">🌡️ Temperatura:</string>
    <string name="title_humidity">💦 Humedad:</string>
    <string name="title_light_hours">☀️ Horas luz:</string>
    <string name="title_tips">📌 Consejos:</string>
    <string name="header_percentage">22.2%</string>
    <string name="header_temperature">Temperatura</string>
    <string name="header_humidity">Humedad</string>
    <string name="header_pollution">Contaminación</string>
    <string name="last_modified">Ultima modificación: </string>
    <string name="planting_card_title">Ficha de plantación</string>
    <string name="planting_card_subtitle">Conoce más sobre tu cultivo</string>
    <string name="cultival_title">CultivalA</string>
    <string name="cultival_subtitle">Conversa con una IA agrónoma</string>
    <string name="monitor_sensors_title">Monitorear sensores</string>
    <string name="monitor_sensors_subtitle">Humedad 95% Temperatura 22</string>
    <string name="control_sensors_title">Control de sensores y actuadores</string>
    <string name="control_sensors_subtitle">Humedad 95% Temperatura 22</string>
    <string name="graph_data_title">Graficar datos</string>
    <string name="graph_data_subtitle">Grafica datos de una fecha específica</string>
    <string name="ventilation_title">Ventilación</string>
    <string name="ventilation_subtitle">Modifica la intensidad de ventilación</string>
    <string name="emergency_control_title">Control de emergencia</string>
    <string name="emergency_control_subtitle">Controla las alarmas de emergencia</string>
    <string name="users_title">Usuarios</string>
    <string name="users_subtitle">Modificar usuario</string>
    <string name="first_name">Nombre(s)</string>
    <string name="last_name">Apellidos</string>
    <string name="admin_user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="greenhouse_name">Nombre del invernadero</string>
    <string name="serial_number">Número de serie</string>
    <string name="login_with_account">Iniciar sesión con tu cuenta</string>
    <string name="create_new_account">Crear una nueva cuenta</string>
    <string name="greenhouse_not_registered">¿Aún no tienes cuenta?</string>
    <string name="already_have_account">Crea una aquí</string>
    <string name="username">Nombre de usuario</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_up">Registrarse</string>
    <string name="create_user">Crear usuario</string>
    <string name="update_user">Actualizar usuario</string>
    <string name="registration_help_message">¿Tienes algún problema al registrar? Contáctanos</string>
    <string name="example_greenhouse">Ej. Invernadero</string>
    <string name="example_green_house">Ej. Green House</string>
    <string name="example_admin_greenhouse">Ej. Admin-Invernadero</string>
    <string name="example_leon_greenhouse">Ej. Invernadero León</string>
    <string name="example_serial_number">Ej. DCSGH-123455</string>
    <string name="repeat_password">Repite la contraseña</string>
    <string name="profile_title">Mi perfil</string>
    <string name="profile_username">Nombre de usuario</string>
    <string name="profile_name">Nombre y apellido</string>
    <string name="users_section_title">Usuarios</string>
    <string name="user_item_username">Nombre de usuario</string>
    <string name="user_item_name">Nombre completo</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="welcome_message">👋 ¡Hola! mi nombre es CultivaIA y soy un experto en agronomía e invernaderos. 🌱\n\n
        Puedo ayudarte con:\n
        🌿 Cultivos en invernadero\n
        🌡️ Control climático\n
        💧 Riego automatizado\n
        🐜 Manejo de plagas\n
        🌱 Nutrición vegetal\n\n
        Si tu pregunta no está relacionada, te avisaré amablemente. 😊
    </string>
    <string name="typing_message_1">Déjame pensar en eso… 🧠</string>
    <string name="typing_message_2">Cultivando la respuesta perfecta para ti… 🌿</string>
    <string name="typing_message_3">Regando las ideas para darte la mejor solución… 💧</string>
    <string name="typing_message_4">Un momento, estoy buscando la mejor respuesta… 🌱</string>
    <string name="typing_message_5">Procesando tu consulta, espera un instante… ⏳</string>
    <string name="system_message">Eres un experto en agronomía e invernaderos, te llamas CultivaIA. Responde solo preguntas relacionadas con:\n- Cultivos en invernadero\n- Control climático\n- Riego automatizado\n- Manejo de plagas\n- Nutrición vegetal\n- Temperatura, humedad, luz, CO2\n\nSi la pregunta está fuera de estos temas, responde que no puedes responder de manera amable y con emojis amigables.</string>
    <string name="personal_info">Información personal</string>
    <string name="greenhouse_info">Información del invernadero</string>
    <string name="update">Actualizar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="emergency_shutdown_system">Sistema de apagado de emergencia</string>
    <string name="cut_power_supply">Cortar suministro de energía</string>
    <string name="warning_label">ADVERTENCIA</string>
    <string name="gas_header">Gas</string>
    <string name="set_lower_limit">Configurar nuevo límite inferior:</string>
    <string name="set_upper_limit">Configurar nuevo límite superior:</string>
    <string name="update_limits">Actualizar límites</string>
    <string name="last_measurement">Última medición:</string>
    <string name="last_update">Última actualización:</string>
    <string name="sensors">Sensores</string>
    <string name="loading">Cargando...</string>
    <string name="actuators">Actuadores</string>
    <string name="humidifier">Humidificador</string>
    <string name="ventila">Ventilación</string>
    <string name="alarms">Alarmas</string>
    <string name="off">OFF</string>
    <string name="level_1">Nivel 1</string>
    <string name="refresh_data">Actualizar datos</string>
    <string name="developed_by">Desarrollado por Deep Code</string>
    <string name="app_versio">Versión </string>
    <string name="start">Comenzar</string>
    <string name="dialog_title_disabled_button">Botón Inhabilitado</string>
    <string name="dialog_message_disabled_button">Por seguridad, el botón de paro de emergencia se encuentra temporalmente inhabilitado.</string>
    <string name="dialog_button_ok">Entendido</string>
    <string name="current_lower_limit_temperature">Límite inferior actual: %.1f °C</string>
    <string name="current_upper_limit_temperature">Límite superior actual: %.1f °C</string>
    <string name="current_lower_limit_humidity">Límite inferior actual: %.1f %%</string>
    <string name="current_upper_limit_humidity">Límite superior actual: %.1f %%</string>
    <string name="current_lower_limit_gas">Límite inferior actual: %.1f ppm</string>
    <string name="current_upper_limit_gas">Límite superior actual: %.1f ppm</string>
    <string name="error_invalid_temperature_values">Valores numéricos inválidos para temperatura</string>
    <string name="error_invalid_humidity_values">Valores numéricos inválidos para humedad</string>
    <string name="error_invalid_gas_values">Valores numéricos inválidos para gas</string>
    <string name="username_required">El nombre de usuario es obligatorio.</string>
    <string name="first_name_required">El nombre es obligatorio.</string>
    <string name="last_name_required">El apellido es obligatorio.</string>
    <string name="greenhouse_name_required">El nombre del invernadero es obligatorio.</string>
    <string name="serial_number_required">El número de serie es obligatorio.</string>
    <string name="model_required">El modelo es obligatorio.</string>
    <string name="required_field">Campo obligatorio</string>
    <string name="strUltimaActualizacion">Última actualización: </string>
    <string name="confirm_deletion">Confirmar Eliminación</string>
    <string name="confirm_delete_message">¿Estás seguro de que quieres eliminar a %1$s?</string>
    <string name="delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="user_deleted_successfully">Usuario eliminado correctamente</string>
</resources>