<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surfaceContainerHighest_mediumContrast"
    tools:context=".menu_admin">

    <!-- ScrollView para permitir el desplazamiento -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="414dp"
        android:layout_height="93dp"
        android:background="@color/md_theme_onSecondaryFixedVariant"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Contenedor principal personalizado -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp">

            <!-- Título principal (UserAdmin) -->

            <com.google.android.material.button.MaterialButton
                android:id="@+id/iconButton"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginTop="30dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:scaleType="fitCenter"
                app:icon="@drawable/flecha_atras"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="30dp"
                app:iconTint="@color/md_theme_onPrimaryContainer_mediumContrast"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.166" />

            <!-- Contenedor para iconos derecha -->

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="246dp"
                android:layout_height="93dp"
                android:layout_marginTop="8dp"
                android:text="@string/ficha_plantacion"
                android:textAlignment="center"
                android:textColor="@color/md_theme_secondaryFixed"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintHorizontal_bias="0.416"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/md_theme_surfaceBright_mediumContrast"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@color/md_theme_onPrimaryContainer_highContrast"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_crop_name"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_onSecondaryContainer"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/fp_nombre"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_tertiaryContainer_mediumContrast"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@color/md_theme_onPrimaryContainer_highContrast"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_scientific_name"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_onSecondaryContainer"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/fp_nombre_cientifico"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_tertiaryContainer_mediumContrast"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@color/md_theme_onPrimaryContainer_highContrast"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_varieties"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_onSecondaryContainer" />

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/fp_variedades"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_tertiaryContainer_mediumContrast" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@color/md_theme_onPrimaryContainer_highContrast"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_soil_type"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_onSecondaryContainer" />

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/fp_tipo_suelo"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_tertiaryContainer_mediumContrast" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@color/md_theme_onPrimaryContainer_highContrast"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_irrigation_types"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_onSecondaryContainer" />

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/fp_riego"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_tertiaryContainer_mediumContrast" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@color/md_theme_onPrimaryContainer_highContrast"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_fertilization"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_onSecondaryContainer" />

                <TextView
                    android:id="@+id/textView37"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/fp_fertilizacion"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_tertiaryContainer_mediumContrast" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@color/md_theme_onPrimaryContainer_highContrast"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_pest_disease_control"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_onSecondaryContainer" />

                <TextView
                    android:id="@+id/textView38"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/fp_plagas_enfermedades"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_tertiaryContainer_mediumContrast"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@color/md_theme_onPrimaryContainer_highContrast"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_temperature"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_onSecondaryContainer" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/fp_temperatura"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_tertiaryContainer_mediumContrast" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@color/md_theme_onPrimaryContainer_highContrast"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_humidity"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_onSecondaryContainer" />

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/fp_humedad"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_tertiaryContainer_mediumContrast" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@color/md_theme_onPrimaryContainer_highContrast"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_light_hours"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_onSecondaryContainer" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/fp_luz"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_tertiaryContainer_mediumContrast" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:background="@color/md_theme_onPrimaryContainer_highContrast"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_tips"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_onSecondaryContainer" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="314dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="20dp"
                    android:text="@string/fp_consejos"
                    android:textAlignment="viewStart"
                    android:textColor="@color/md_theme_tertiaryContainer_mediumContrast" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>